切换了完整特性的ckeditor并且删除了冗余的引用